--- a/ChatApp/ChatAppWithSignalR/Views/Home/Index.cshtml
+++ b/ChatApp/ChatAppWithSignalR/Views/Home/Index.cshtml
@@ -7,6 +7,7 @@
     <div class="row">
         <div class="col-6">&nbsp;</div>
         <div class="col-6">
+            RoomId: <input type="text" id="roomInput" />
             Name:   <input type="text" id="userInput" />
             <br />
             Message:<input type="text" id="messageInput" />
