--- a/ChatApp/ReactFrontend/react-chat/src/App.css
+++ b/ChatApp/ReactFrontend/react-chat/src/App.css
@@ -1,8 +1,8 @@
 :root {
   --primary-color: blue;
-  --secondary-color: red;
+  --secondary-color: white;
   --primary-text-color: black;
-  --secondary-text-color: white;
+  --secondary-text-color: black;
   --add-message-form-color: #f5f5f5;
 }
 
@@ -111,7 +111,7 @@ html, body {
 }
 
 .message .message-text {
-  background: var(--main-color);
+  background: var(--primary-color);
   color: var(--secondary-color);
   display: inline;
   padding: 4px 8px;
